Enable nfJson to do a full round trip from JSON to object to JSON without altering the name of JSON elements. Tests are written for foxUnit.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@ $RECYCLE.BIN/
 # Thumbnails
 ._*
 
+# FoxUnit files
+FxuClassFactory.dbf
+FXUResults.DBF
+FXUResults.FPT
+FXUResults.CDX
+FXUPERSIST.XML
+FXUPERSISTGETTEMPLATE.XML
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
